# notion-db

./: .gitignore  .readthedocs.yaml  README.md  brainstorm.md  out.json  readme.md  setup.py
docs/: readme.rst
docs/source/: conf.py  index.rst  modules.rst  notion.Connector.rst  notion.Database.rst  notion.PropertyValues.rst  notion.Schema.rst  notion.Types.rst  notion.rst  notiondb.Connector.rst  notiondb.Database.rst  notiondb.PropertyValues.rst  notiondb.Row.rst  notiondb.Schema.rst  notiondb.SchemaProperty.rst  notiondb.rst
notion/: Connector.py  Database.py  Schema.py  Types.py
src/: pyproject.toml  pyprolect.toml  readme.md
src/notion/: Connector.py  Database.py  PropertyValues.py  Schema.py  SchemaObjects.py  Types.py  __init__.py
src/notiondb/: Connector.py  Database.py  PropertyValues.py  Row.py  Schema.py  SchemaProperty.py  __init__.py
src/tests/: test_p_vals.py  test_row_objects.py  test_schema.py  test_schema_obj.py
tests/: basic.py  row_objects.py  schema_objects.py  test_p_vals.py
