[tool.poetry]
name = "notiondb"
version = "0.1.0"
description = "A powerful object-oriented Python library for easy interaction with Notion.so databases"
authors = ["Matt Prodani <mattp@nyu.edu>"]
license = "GPL-3.0"
readme = "readme.rst"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
urllib3 = "^1.25.12"
pandas = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
autodocsumm = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"