[tool.poetry]
name = "notion-toolkit"
version = "0.1.1"
description = "A powerful object-oriented Python library for easy interaction with Notion.so databases"
authors = ["Matt Prodani <mattp@nyu.edu>"]
homepage = "https://notion-db.rtfd.io"
repository = "https://github.com/mattprodani/notion-db"
license = "GPL-3.0"
readme = "README.md"
packages = [
    {include = "notiondb"}
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
urllib3 = "^1.25.12"
pandas = "^1.5.0"
autodocsumm = {version = "^0.2.9", optional = true}
myst-parser = {version = "^0.18.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[tool.poetry.extras]
dev = ["pytest"]
docs = ["autodocsumm", "myst-parser"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"